--- a/lm.Rmd
+++ b/lm.Rmd
@@ -192,6 +192,43 @@ down_gene_pvals <- merge(
 
 ```
 
-```{r}
-format(down_gene_pvals[order(`Non PC Corrected p-value`)], scientific = F) %>% as.data.frame()
+```{r format}
+down_gene_pvals <- format(down_gene_pvals[order(`Non PC Corrected p-value`)], scientific = F) %>% as.data.frame()
 ```
+
+```{r}
+down_gene_pvals
+```
+
+
+```{r}
+down_gene_pvals <- merge(x = down_gene_pvals,
+      y = data.table::fread("./data/gene_exp.diff") %>%
+        filter(gene_id %in% down_gene_pvals$gene_id) %>%
+        select(gene_id, gene, value_1, value_2)
+      )
+
+down_gene_pvals
+```
+
+
+```{r}
+df_down_pathways <- read_xls("./IPA-results/down-genes_diseases_and_functions.xls", col_names = TRUE)
+
+df_down_pathways <- unique(df_down_pathways %>%
+  unnest_tokens(genes, Molecules) %>%
+  mutate(genes = toupper(genes)) %>%
+  group_by(genes) %>% 
+  mutate(disease_pathways = paste0(`Diseases or Functions Annotation`, collapse = ", ")) %>%
+  select(genes, disease_pathways))
+
+pvals_pathways <- merge(x = down_gene_pvals, 
+      y = df_down_pathways,
+      by.x = "gene",
+      by.y = "genes",
+      all.x = TRUE,
+      all.y = FALSE)
+
+
+```
+
