--- a/lm.Rmd
+++ b/lm.Rmd
@@ -1,11 +1,20 @@
 
-```{r}
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(tidy.opts = list(width.cutoff = 60), tidy = TRUE)
+rm(list=ls())
+```
+
+
+```{r load libraries}
 library(tidyverse)
 library(data.table)
+library(readxl)
+library(tidytext)
 library(ggfortify)
 library(ggplot2)
 library(factoextra)
-if (!require(ComplexHeatmap)) { BiocManager::install("ComplexHeatmap") }
 library(ComplexHeatmap)
 library(pvclust)
 library(parallel)
@@ -13,7 +22,7 @@ library(dendextend)
 ```
 
 
-## PCA data
+### Obtain principal components 1 and 2 from PCA analysis on all genes
 
 ```{r}
 fpkm <- data.table::fread("./data/genes.fpkm_tracking", sep = "\t")
@@ -47,60 +56,93 @@ fpkm_norm$type <- ifelse(grepl("norm", fpkm_norm$samples), "normal tissue",
 
 
 pca <- prcomp(fpkm_norm.data, scale. = FALSE)
-
-pca$x
-
-autoplot(pca, scale = FALSE, data = fpkm_norm, colour = "type") + ggtitle("PCA unfiltered")
 ```
 
 
-## PCA on Filtered Genes
 
-```{r redo PCA with filtered genes only}
-fpkm_filt <- data.table::fread("./data/genes.fpkm_tracking", sep = "\t")
+## Pathway Analysis
 
-names(fpkm_filt)[26:29] <- names(fpkm_filt)[26:29] %>% # fix column names
+```{r read in data}
+down_pthwy <- read_xls("./IPA-results/down-genes_diseases_and_functions.xls", col_names = TRUE)
+up_pthwy <- read_xls("./IPA-results/up-genes_diseases_and_functions.xls", col_names = TRUE)
+```
+
+View upregulated pathways with a good amount of genes (between 10 and 50) for heatmap visualization
+
+```{r upregulated pathways}
+up_pthwy %>%
+  filter(`# Molecules` %between% c(10, 50)) %>%
+  select(`Diseases or Functions Annotation`, Molecules, `# Molecules`)
+```
+
+I will choose to analyze the pathway that has been implicated in breast carcinoma for this study.
+
+```{r select breast carcinoma molecules}
+brcar <- up_pthwy %>%
+  filter(`Diseases or Functions Annotation` == "Breast carcinoma") %>%
+  unnest_tokens(gene, Molecules) %>%
+  mutate(gene = toupper(gene)) %>%
+  select(gene)
+
+brcar
+```
+
+
+
+View downregulated pathways with a good amount of genes (between 10 and 50) for heatmap visualization
+
+```{r downregulated pathways}
+down_pthwy %>%
+  filter(`# Molecules` %between% c(10, 40)) %>%
+  select(`Diseases or Functions Annotation`, Molecules, `# Molecules`)
+```
+
+I choose to look at "Metabolism of Carbohydrate"pathway, which is downregulated in gi cancer.
+```{r select carbohydrate metabolism pathways}
+meta <- down_pthwy %>%
+  filter(`Diseases or Functions Annotation` == "Metabolism of carbohydrate") %>%
+  unnest_tokens(gene, Molecules) %>%
+  mutate(gene = toupper(gene)) %>%
+  select(gene)
+
+meta
+```
+
+######### Linear Model Testing
+
+```{r reread in fpkm values}
+fpkm <- data.table::fread("./data/genes.fpkm_tracking", sep = "\t")
+
+names(fpkm)[26:29] <- names(fpkm)[26:29] %>% # fix column names
   str_replace("ct2", "ct3")
 
 
-fpkm_filt <- fpkm_filt %>% 
-  select(tracking_id, ends_with("_FPKM")) %>%
-  filter(tracking_id %in% exp_filt$test_id) %>%
-  column_to_rownames("tracking_id")
+fpkm <- fpkm %>% 
+  select(gene_id, gene_short_name, ends_with("_FPKM"))
 
+fpkm_norm <- fpkm %>%
+  select(-gene_id) %>%
+  filter((gene_short_name %in% brcar$gene) | (gene_short_name %in% meta$gene)) %>%
+  column_to_rownames("gene_short_name") %>%
+  t() %>%
+  as.data.frame()
 
-fpkm_filt_norm <- log10(fpkm_filt + 0.1)          
+fpkm_norm <- log10(fpkm_norm + 0.1)
 
-fpkm_filt_norm <- t(fpkm_filt_norm)
-
-fpkm_filt_norm <- fpkm_filt_norm %>%
-  as.data.frame() %>%
-  rownames_to_column("sample") %>%
-  mutate(type = ifelse(grepl("norm", sample), "normal tissue",
-                         ifelse(grepl("ct", sample), "cancer tissue", "cancer cell line")))
-  
-
-fpkm_filt_norm.data <- fpkm_filt_norm %>% select(-c(sample, type))
-
-pca2 <- prcomp(fpkm_filt_norm.data)
-
-pca2$x
-
-autoplot(pca2, scale = FALSE, data = fpkm_filt_norm, colour = "type") + ggtitle("PCA on Filtered Genes")
+fpkm_norm
 ```
 
 
 
 
-
-
-lm test to correct for original PC1 and PC2 values
+run lm test on single random gene to correct for original PC1 and PC2 values
 
 ```{r pca correction - single gene}
 
 lm_data <- merge(
-  x = fpkm_filt_norm %>%
-    select(sample, ENSG00000122641),
+  x = fpkm_norm %>%
+    rownames_to_column("sample") %>%
+    select(sample, CD22),
   
   y = pca$x %>%
     as.data.frame() %>%
@@ -110,50 +152,18 @@ lm_data <- merge(
   mutate(sample = if_else(grepl("norm", sample), "normal tissue",
                             if_else(grepl("ct", sample), "cancer tissue", "cancer cell line")))
 
-lm1 <- lm(ENSG00000122641 ~ sample, data = lm_data)
-
-lmp <- function (modelobject) {
-    if (class(modelobject) != "lm") stop("Not an object of class 'lm' ")
-    f <- summary(modelobject)$fstatistic
-    p <- pf(f[1],f[2],f[3],lower.tail=F)
-    attributes(p) <- NULL
-    return(p)
-}
-
-lmp(lm1)
+lm1 <- lm(CD22 ~ sample, data = lm_data)
+lm2 <- lm(CD22 ~ sample + PC1 + PC2, lm_data)
 
 
-#summary(lm(ENSG00000122641 ~ sample + PC1 + PC2, data = lm_data))
-
+summary(lm1)
+summary(lm2)
 ```
 
-```{r run lm test on all down genes}
-
-# create dataframe with down genes, PC1, and PC2, and group names, with genes as columns
-down_lm_data <- merge(x = pca$x %>%
-        as.data.frame() %>%
-        select(PC1, PC2) ,
-      y = merge(x = down_genes,
-                y = fpkm_filt_norm %>%
-                  t() %>%
-                  as.data.frame() %>%
-                  purrr::set_names(as.character(slice(., 1))) %>%
-                  slice(-1) %>%
-                  rownames_to_column("gene_id")
-                ) %>%
-        select(-gene) %>%
-        column_to_rownames("gene_id") %>%
-        mutate_if(is.character, as.numeric) %>%
-        t() %>%
-        as.data.frame(),
-       by = "row.names",
-      all = TRUE
-) %>%
-  rename(group = `Row.names`) %>%
-  mutate(group = if_else(grepl("norm", group), "normal tissue",
-                            if_else(grepl("ct", group), "cancer tissue", "cancer cell line")))
+Run lm test on all genes selected from the breast carcinoma pathway
 
 
+```{r return p-value function}
 # function to return p-value from lm object
 lmp <- function (modelobject) {
     if (class(modelobject) != "lm") stop("Not an object of class 'lm' ")
@@ -162,73 +172,138 @@ lmp <- function (modelobject) {
     attributes(p) <- NULL
     return(p)
 }
+```
 
 
-# Run lm test on all genes against group
-no_correction <- list()
-correction <- list()
-for (i in names(down_lm_data[4:length(names(down_lm_data))])){
-  no_correction[i] <- lmp(lm(get(i) ~ group, down_lm_data))
-  correction[i] <- lmp(lm(get(i) ~ group + PC1 + PC2, down_lm_data))
+```{r prepare fpkm data}
+exp_filt <- data.table::fread("./data/gene_exp.diff", sep = "\t") %>%
+  arrange(`log2(fold_change)`) %>%
+  filter(p_value < 0.001) %>%
+  filter(`log2(fold_change)` != -Inf, # Inf or -Inf means gene had 0 expression in one of the groups
+         `log2(fold_change)` != Inf) %>%
+  filter(`log2(fold_change)` <= -5 | `log2(fold_change)` >= 5)
+
+fpkm_filt <- fpkm %>%
+  filter(gene_id %in% exp_filt$gene_id) %>%
+  select(-gene_id) %>%
+  filter(gene_short_name != "-") %>%
+  column_to_rownames("gene_short_name") %>%
+  t() %>%
+  as.data.frame()
+
+fpkm_filt_norm <- log10(fpkm_filt + 0.1) %>% 
+  t() %>%
+  as.data.frame() %>%
+  rownames_to_column("gene")
+
+fpkm_filt_norm 
+```
+
+
+```{r breast carcinoma lm}
+# add fpkm values for all samples to gene names
+
+brcar <- merge(x = brcar, y = fpkm_filt_norm, by.x = "gene", by.y = "gene", all.y = FALSE)
+
+# add PC1 and PC2 to data frame and assign samples to groups
+brcar <- merge(x = pca$x %>%
+        as.data.frame() %>%
+        select(PC1, PC2),
+      y = brcar %>%
+        column_to_rownames("gene") %>%
+        t() %>%
+        as.data.frame(),
+      by = "row.names"
+) %>%
+  rename(group = `Row.names`) %>%
+  mutate(group = if_else(grepl("norm", group), "normal tissue",
+                            if_else(grepl("ct", group), "cancer tissue", "cancer cell line")))
+
+
+no_correction <- list() # initialize empty list to hold p-values for non-corrected lm test
+correction <- list() # empty list to hold p-values for corrected lm test
+for (i in names(brcar[4:length(names(brcar))])){
+  no_correction[i] <- lmp(lm(get(i) ~ group, brcar))
+  correction[i] <- lmp(lm(get(i) ~ group + PC1 + PC2, brcar))
 }
 
 
-# extract p-values for all genes and merge back to down genes list to see gene name with p-values together
 
-down_gene_pvals <- merge(
-  x = down_genes,
-  
-  y = rbind(no_correction %>% 
-        as.data.frame(), 
-      correction %>% 
-        as.data.frame()
-      )%>%
+brcar_pval <- rbind(as.data.frame(no_correction), as.data.frame(correction)) %>% 
   t() %>%
   as.data.frame() %>%
-  rename("Non PC Corrected p-value" = V1,
-         "PC Corrected p-value" = V2) %>%
-  rownames_to_column("gene_id")
-)
+  rename("Non PC Corrected p-value" = V1, "PC Corrected p-value" = V2) %>%
+  format(scientific = FALSE) %>%
+  rownames_to_column("gene")
+
+brcar_pval %>%
+ filter(`PC Corrected p-value` < 0.05)
 
 ```
 
-```{r format}
-down_gene_pvals <- format(down_gene_pvals[order(`Non PC Corrected p-value`)], scientific = F) %>% as.data.frame()
+
+```{r visualize results}
+brcar_pval %>%
+  reshape::melt() %>%
+  mutate(value = as.numeric(value)) %>%
+  arrange(gene) %>%
+  ggplot(aes(x = forcats::fct_reorder(factor(gene), value), y = value)) +
+  geom_bar(aes(fill = variable), stat = "identity", position = "dodge") +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
+  geom_hline(yintercept = 0.05) +
+  labs(y = "p-value", x = "gene")
+
 ```
+
+
+### Run linear model test on all genes selected from carbohydrate metabolism pathway
 
 ```{r}
-down_gene_pvals
+meta <- merge(x = meta, y = fpkm_filt_norm, by.x = "gene", by.y = "gene", all.y = FALSE)
+
+# add PC1 and PC2 to data frame and assign samples to groups
+meta <- merge(x = pca$x %>%
+        as.data.frame() %>%
+        select(PC1, PC2),
+      y = meta %>%
+        column_to_rownames("gene") %>%
+        t() %>%
+        as.data.frame(),
+      by = "row.names"
+) %>%
+  rename(group = `Row.names`) %>%
+  mutate(group = if_else(grepl("norm", group), "normal tissue",
+                            if_else(grepl("ct", group), "cancer tissue", "cancer cell line")))
+
+
+no_correction <- list() # initialize empty list to hold p-values for non-corrected lm test
+correction <- list() # empty list to hold p-values for corrected lm test
+for (i in names(meta[4:length(names(meta))])){
+  no_correction[i] <- lmp(lm(get(i) ~ group, meta))
+  correction[i] <- lmp(lm(get(i) ~ group + PC1 + PC2, meta))
+}
+
+
+
+meta_pval <- rbind(as.data.frame(no_correction), as.data.frame(correction)) %>% 
+  t() %>%
+  as.data.frame() %>%
+  rename("Non PC Corrected p-value" = V1, "PC Corrected p-value" = V2) %>%
+  format(scientific = FALSE) %>%
+  rownames_to_column("gene")
+
+meta_pval
 ```
 
-
-```{r}
-down_gene_pvals <- merge(x = down_gene_pvals,
-      y = data.table::fread("./data/gene_exp.diff") %>%
-        filter(gene_id %in% down_gene_pvals$gene_id) %>%
-        select(gene_id, gene, value_1, value_2)
-      )
-
-down_gene_pvals
-```
-
-
-```{r}
-df_down_pathways <- read_xls("./IPA-results/down-genes_diseases_and_functions.xls", col_names = TRUE)
-
-df_down_pathways <- unique(df_down_pathways %>%
-  unnest_tokens(genes, Molecules) %>%
-  mutate(genes = toupper(genes)) %>%
-  group_by(genes) %>% 
-  mutate(disease_pathways = paste0(`Diseases or Functions Annotation`, collapse = ", ")) %>%
-  select(genes, disease_pathways))
-
-pvals_pathways <- merge(x = down_gene_pvals, 
-      y = df_down_pathways,
-      by.x = "gene",
-      by.y = "genes",
-      all.x = TRUE,
-      all.y = FALSE)
-
-
+```{r visualize upregulated genes results}
+meta_pval %>%
+  reshape::melt() %>%
+  mutate(value = as.numeric(value)) %>%
+  arrange(gene) %>%
+  ggplot(aes(x = forcats::fct_reorder(factor(gene), value), y = value)) +
+  geom_bar(aes(fill = variable), stat = "identity", position = "dodge") +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
+  geom_hline(yintercept = 0.05) +
+  labs(y = "p-value", x = "gene")
 ```
 
