--- a/README.Rmd
+++ b/README.Rmd
@@ -28,6 +28,7 @@ library(gridExtra)
 library(tidytext)
 library(readxl)
 library(circlize)
+library(webshot)
 ```
 
 #### Plot Read Counts For all 8 Samples
@@ -661,7 +662,23 @@ p2 <- lm_df %>%
   annotate("text", label = paste("p-value:", round(lmp(lm(SLC2A4 ~ group, lm_df)), 6), sep = " "), x = 2, y = 2)
 
 
-grid.arrange(p1, p2, ncol = 1)
+p3 <- lm_df %>%
+  select(group, GCNT4 ) %>%
+  group_by(group) %>%
+  summarise(mean = mean(GCNT4 ), sd = sd(GCNT4 )) %>%
+  ggplot(aes(x = forcats::fct_reorder(factor(group), mean), y = mean, fill = group)) +
+  geom_col() +
+  geom_errorbar(aes(x = group, ymin = mean - sd, ymax = mean + sd), width=0.4, colour="orange", alpha=0.9, size=1.3) +
+  geom_text(aes(label = paste("Average log10(fpkm):", round(mean, 2), sep = " "),
+                hjust = 0.5,
+                vjust = ifelse(mean < 0, 5.5, -2.5)),
+            size = 3) +
+  geom_hline(yintercept = 0) +
+  ylim(-2, 2) +
+  labs(x = "", y = "Average log(10) FPKM", title = "GCNT4 ") +
+  annotate("text", label = paste("p-value:", round(lmp(lm(GCNT4 ~ group, lm_df)), 6), sep = " "), x = 2, y = 2)
+
+grid.arrange(p1, p2, p3, ncol = 2)
 ```
 
 
@@ -720,3 +737,39 @@ lgd_sig <- Legend(pch = "*", type = "points", labels = "< 0.05")
 
 draw(ht2, annotation_legend_list = list(lgd_pvalue, lgd_sig))
 ```
+
+```{r, warning=FALSE, include=FALSE, eval=FALSE}
+h1 <- Heatmap(meta_norm,
+        name = "expression",
+        show_column_names = TRUE, 
+        row_split = 3, 
+        clustering_method_rows = "ward.D2",
+        clustering_method_columns = "ward.D2") + 
+  rowAnnotation(`log10(fpkm)` = anno_boxplot(meta_norm)) +
+  rowAnnotation(rn = anno_text(rownames(meta_norm)))
+
+pvals <- list()
+for (i in column_order(h1)){
+  pvals <- c(pvals, meta_pval[i, 3])
+}
+
+pvals <- unlist(pvals)
+
+
+ha <- HeatmapAnnotation(
+    pvalue = anno_barplot(pvals),
+    annotation_name_side = "left")
+
+ht2 <- Heatmap(meta_norm,
+        name = "expression",
+        top_annotation = ha,
+        show_column_names = TRUE, 
+        row_split = 3, 
+        clustering_method_rows = "ward.D2",
+        clustering_method_columns = "ward.D2") + 
+  rowAnnotation(`log10(fpkm)` = anno_boxplot(meta_norm)) +
+  rowAnnotation(rn = anno_text(rownames(meta_norm)))
+
+draw(ht2)
+```
+
