--- a/README.Rmd
+++ b/README.Rmd
@@ -5,9 +5,13 @@ output: github_document
 always_allow_html: true
 ---
 
-In this project, I used publicly available RNA-Seq data from the Gene Expression Omnibus database (accession number GSE41476) to look at how differential gene expression between three groups of samples: gastric cancer tissue, matched adjacent normal tissue, and gastric cancer cell lines.
+## Introduction
 
-The pipeline was all done on a HPC server and the commands used for that can be found in the "server_commands.sh" file on this repository.
+In this project, I used publicly available RNA-Seq data from the Gene Expression Omnibus database (accession number GSE41476) to look at how differential gene expression between three groups of samples: gastric cancer tissue, matched adjacent normal tissue, and gastric cancer cell lines. 
+
+The process of downloading raw sequencing data, alignment, and obtaining gene expression counts was all done on a HPC server and the commands used for that can be found in the "server_commands.sh" file on this repository. This file describes my downstream analysis steps.
+
+-----
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, fig.height=6, fig.width=8, fig.align='center')
@@ -34,9 +38,14 @@ library(circlize)
 library(webshot)
 ```
 
+------
+
 #### Plot Read Counts For all 8 Samples
 
+The tissue samples I worked with in my project come from the bio-resource center of the Asan Medical Center in Seoul. The researchers collected human gastric cancer samples and adjacent normal tissues. They also collected gastric cancer cell lines from the Korean Cell Line Bank.
 
+
+There were a total of 8 samples between the three groups: 2 normal gastric tissue samples, 3 gastric cancer tissue samples, and 3 samples from gastric cancer cell lines. The samples were all paired-end, and sequenced on Illumina’s Genome Analyzer II and stored in SRA format.
 
 ```{r pre-alignment metric plot, fig.width=10}
 samples <- c("SRR585570", "SRR585571", "SRR585572", "SRR585573", "SRR585574", "SRR585575", "SRR585576", "SRR585577")
@@ -46,7 +55,6 @@ reads <- c(18883105, 16580585, 27917182, 34687136, 32772474, 34049244, 31929290,
 groups <- c("normal gastric tissue", "normal gastric tissue", "gastric cancer tissue", "gastric cancer tissue", "gastric cancer tissue", "gastric cancer cell line", "gastric cancer cell line", "gastric cancer cell line")
 
 df <- data.frame(samples, reads, groups)
-#df
 
 df %>%
   ggplot(aes(y = reads/1000000, x = samples)) + 
@@ -62,13 +70,13 @@ df %>%
        y = "Number of Reads (millions)",
        fill = "Group"
        ) 
-
 ```
 
 I determined that I was able to use all 8 samples, since they all had a good number of reads for my purposes. The minimum number of reads was 16.5 million which was in the second normal tissue sample, the maximum was 34.6 million which was in my second gastric cancer tissue sample, and all 8 samples averaged at 28.6 million reads.
 
+------
 
-#### Draw flowchart describing general bioinformatic workflow
+#### Flowchart of bioinformatic workflow
 
 ```{r Flowchart of bioinformatic workflow}
 grViz("digraph flowchart {
@@ -107,12 +115,15 @@ grViz("digraph flowchart {
       ")
 ```
 
+The above commands were all performed on a HPC cluster. The output files, genes.fpkm_tracking and gene_exp.diff were the files I used for downstream analysis in R and are provided in the data folder in this repository. 
+
 I first downloaded the SRA files as fastq files using the fasterq-dump command from sra-toolkit. I also downloaded the fasta file for the human reference genome, version GRCh38, and the GTF file of the genome annotation, both of which were from Ensembl. 
 
 I then built index files from the reference genome using Bowtie2, which will be used to speed up the mapping process. Next, I selected one normal tissue sample and one cancer tissue sample to map to the whole genome and the whole transcriptome using Tophat2 to see if they mapped to one much better. It turned out that the mapping percentages for both genome and transcriptome were both at around 80%, so I just mapped the rest of my samples to the whole genome. 
 
 Once all the reads were mapped, I took my alignment files, or bam files, and put them into two different runs of Cuffdiff. In the first run, I inputted all 8 of my samples and ran Cuffdiff with statistics turned off to get just the read counts of all the genes. The output for this was in my genes.fpkm_tracking file. In the second run, I gave Cuffdiff only my normal and cancer tissue samples as two groups and ran it with the statistics on to get log2 fold change and p-values for the genes just between these two groups. The output for this was in the gene_exp.diff file.
 
+-----
 
 #### Post-Tophat2 Alignment Metrics
 
@@ -135,7 +146,7 @@ df %>%
 
 Overall, the Tophat alignment was pretty successful. Most of my samples have over an 80% mapping rate. The maximum mapping percentage is 83.7%, and the two samples on the right in the chart are cancer cell lines 2 and 3, they had slightly lower mapping rates than the other samples, at about 66 and 69%. But, the average across all 8 samples was 78.5%. 
 
-
+-----
 
 #### PCA analysis on all genes across all samples
 
@@ -146,6 +157,8 @@ names(fpkm)[26:29] <- names(fpkm)[26:29] %>% # fix column names that were incorr
   str_replace("ct2", "ct3")
 
 
+# select needed columns
+
 fpkm <- fpkm %>% 
   select(tracking_id, ends_with("_FPKM"))
 
@@ -155,12 +168,16 @@ fpkm <- fpkm %>% select(ends_with("FPKM"))
 
 fpkm <- t(fpkm)
 
+
 # normalize everything using log10 conversion
+
 fpkm_norm <- fpkm + 0.1
 
 fpkm_norm <- log10(fpkm_norm)
 
+
 # create sample column for labeling
+
 fpkm_norm <- as.data.frame(fpkm_norm)
 fpkm_norm$samples <- row.names(fpkm_norm)
 
@@ -172,18 +189,19 @@ fpkm_norm$type <- ifelse(grepl("norm", fpkm_norm$samples), "normal tissue",
 ```
 
 
-```{r plot pca and edit to scale, fig.width=7}
+```{r plot pca and edit to scale}
 pca <- prcomp(fpkm_norm.data, scale. = FALSE)
 
-pca$x
+#pca$x # view principal components 
 
 autoplot(pca, scale = FALSE, data = fpkm_norm, colour = "type", size = 3) + 
   ggtitle("PCA on 40,295 Genes") + 
   theme_bw()
 ```
 
-Once I had my raw read counts, I started out with over 62,000 genes. And my first step was to remove genes with 0 expression across all the samples, which was about ~22,000 of them, leaving me with about 40,000 genes. I then normalized the fpkm values by adding a pseudocount of 0.1 and taking the log base 10 so that genes with really high expression levels wouldn’t overshadow the rest of my analysis. And then I made a PCA plot of all the ~40,000 genes across all of the samples. You can see that the groups clustered together pretty nicely already, with the cancer tissue on the right, the normal tissue on the left, and the cancer cell lines on the bottom. PC1 accounts for 31.2% of the variance in the data set and seems to separate cancer from non-cancer groups. PC2 accounts for 24.8% of the variance in the data and seems to separate tissues and cell lines.
+You can see that the groups clustered together pretty nicely already, with the cancer tissue on the right, the normal tissue on the left, and the cancer cell lines on the bottom. PC1 accounts for 31.2% of the variance in the data set and seems to separate cancer from non-cancer groups. PC2 accounts for 24.8% of the variance in the data and seems to separate tissues and cell lines.
 
+-----
 
 #### Boxplots for all gene FPKM values across all samples
 
@@ -194,7 +212,7 @@ df <- df + 0.1
 df <- log10(df)
 ```
 
-```{r fpkm boxplots of all samples across all genes}
+```{r fpkm boxplots of all samples across all genes, warning=FALSE}
 df %>%
   t() %>%
   reshape::melt() %>%
@@ -210,8 +228,11 @@ df %>%
 
 From the plot, it looks like the highest median fpkm is in the normal tissue group by just a little bit, but the overall distribution of gene expression looks very similar across all 8 samples. 
 
+-----
 
-#### Diagram on filtering criteria for Integrated Pathway Analysis
+My next step was to filter genes down based on the log2 fold change and p-values so that I could have a manageable number of genes to look at for pathway analysis. The cutoffs I ended up using were a p-value of less than 0.001 and log 2 fold change that was less than -5 or greater than 5. The filtering left me with 280 significantly differentially expressed genes, 198 of them were downregulated and 82 of them were upregulated.
+
+#### Diagram on filtering criteria for Integrated Pathway Analysis (from QIAGEN)
 
 ```{r gene filtering}
 grViz(diagram = "digraph flowchart {
@@ -242,7 +263,7 @@ grViz(diagram = "digraph flowchart {
       ")
 ```
 
-My next step was to filter genes down based on the log2 fold change and p-values so that I could have a manageable number of genes to look at for pathway analysis. The cutoffs I ended up using were a p-value of less than 0.001 and log 2 fold change that was less than -5 or greater than 5. The filtering left me with 280 significantly differentially expressed genes, 198 of them were downregulated and 82 of them were upregulated. 
+ 
 
 Perform filtering of genes according to the above diagram
 
@@ -272,7 +293,7 @@ down_genes <- exp_filt %>%
   select(gene_id, gene)
 ```
 
-
+-----
 
 #### PCA with filtered genes only
 
@@ -304,7 +325,7 @@ fpkm_filt_norm.data <- fpkm_filt_norm %>% select(-c(sample, type))
 
 pca2 <- prcomp(fpkm_filt_norm.data, scale. = FALSE)
 
-pca2$x
+#pca2$x
 
 autoplot(pca2, scale = FALSE, data = fpkm_filt_norm, colour = "type", size = 3) + 
   ggtitle("PCA on 280 Filtered Genes") + 
@@ -313,10 +334,9 @@ autoplot(pca2, scale = FALSE, data = fpkm_filt_norm, colour = "type", size = 3) 
 
 With the 280 filtered genes, I redid my principal component analysis and got the plot that you see on the screen. It looks very similar to my first PCA plot with the unfiltered genes, the three groups also clustered together and in the same areas, but in this one it looks like the samples within each group clustered a bit closer together. Also, principal component 1 now accounts for 62% of the variance in the data, which is double the principal component 1 from my original PCA plot.
 
+-----
 
-Compute Dendrograms
-
-Use pearson correlation for distance and ward.D2 and complete for clustering method
+#### Compute distance measures and clustering methods for hierarchical clustering
 
 ```{r Dendrogram of differentially expressed genes ward method, warning = FALSE}
 rownames(fpkm_filt_norm.data) <- fpkm_filt_norm$sample
@@ -350,19 +370,19 @@ grid.arrange(p1, p2, p3, p4)
 
 It appears that using euclidean distance along with Ward's method gives us the clustering that we expect to see given our knowledge of the three groups.
 
-```{r visualize p3}
+```{r visualize p3, warning=FALSE}
 fviz_dend(res.eucl.ward.hc, cex = 0.75, k = 3, color_labels_by_k = TRUE, k_colors = c("blue", "red", "darkgreen"),
           rect = TRUE, rect_fill = TRUE, show_labels = TRUE,
           main = "Hierarchical Clustering of Samples Based on 280 Filtered Genes", xlab = "Samples") 
 ```
 
-The clustering turned out really nice, you can see the top separation separated cancer from non-cancer, and within the cancer cluster there's a separation between cancer tissue and cancer cell lines.
+The top separation separated cancer from non-cancer, and within the cancer cluster there's a separation between cancer tissue and cancer cell lines.
 
 
 
-Evaluate Dendrograms
+#### Evaluate Dendrograms using p-values 
 
-```{r p-values for ward clustering}
+```{r p-values for ward clustering, warning=FALSE, message=FALSE}
 # create cluster for parallel computing
 n.cores <- detectCores()*3/4
 cl <- makePSOCKcluster(n.cores)
@@ -378,15 +398,16 @@ res.eucl.complete.pv <- parPvclust(cl, t(fpkm_filt_norm.data), method.hclust = "
 stopCluster(cl)
 
 # plot
-p1 <- plot(res.pear.ward.pv, hang = -1, cex = 0.5)
-p2 <- plot(res.pear.complete.pv, hang = -1, cex = 0.5)
-p3 <- plot(res.eucl.complete.pv, hang = -1, cex = 0.5)
-
-# Clusters with AU >= 95% are considered to be strongly supported by data.
+## Clusters with AU >= 95% are considered to be strongly supported by data.
+plot(res.pear.ward.pv, hang = -1, cex = 0.5)
+plot(res.pear.complete.pv, hang = -1, cex = 0.5)
+plot(res.eucl.complete.pv, hang = -1, cex = 0.5)
 ```
 
 Above, it appears that using pearson correlation and complete clustering method clustered ccl3_FPKM poorly. The AU values for using both pearson and euclidean along with Ward's method gave stronger AU values.
 
+
+#### Compare top 2 dendrograms using tanglegram
 
 ```{r view tanglegram of top clusters}
 dend1 <- as.dendrogram(res.pear.ward.hc)
@@ -401,21 +422,11 @@ dendlist(dend1, dend2) %>%
 Using pearson correlation for distance metric instead of euclidean results in cancer cell line 2 clustering with the normal tissues instead of with the other cancer cell line samples. I have determined that using euclidean distance and ward's method to be the best choices with my data.
 
 
-#### Plot Heatmap
+-----
 
-```{r heatmap wards}
-Heatmap(data.matrix(fpkm_filt_norm.data), 
-        name = "Expression",
-        show_column_names = FALSE, 
-        row_split = 3, 
-        clustering_method_rows = "ward.D2",
-        clustering_method_columns = "ward.D2")
-```
-
+#### Plot heatmap of gene expression
 
 ```{r annotated heatmap wards}
-
-
 boxplot <- rowAnnotation(`log10(fpkm)` = anno_boxplot(data.matrix(fpkm_filt_norm.data)),
                          gp=gpar(fill="#CCCCCC"))
 
@@ -433,16 +444,15 @@ draw(hmap)
 You can see that there is a large block of genes that are expressed highly in normal tissue and a block of genes expressed highly in cancer tissue. The cell line cluster seems to be spread out, with some highly expressed genes overlapping with normal tissue and some overlapping with cancerous tissue. On the right side, I also included boxplots of the overall fpkm values and you can see that the expression levels are higher overall for the normal samples, compared to the cancer samples which makes sense because now I’m working with more genes that are downregulated in cancer than upregulated
 
 
+-----
 
-At this point, I submitted the list of up regulated and down regulated genes to do a simple integrated pathway analysis (software from QIAGEN). There were many significant pathways returned, many of the down regulated ones were involved in immune system function whereas many of the up regulated pathways have been previously implicated in cancer. The excel files are located in the IPA-results folder.
+At this point, I looked to the list of upregulated and downregulated genes from tthe integrated pathway analysis (software from QIAGEN) to find a pathway to look at more in depth. There were many significant pathways returned, many of the down regulated ones were involved in immune system function whereas many of the up regulated pathways have been previously implicated in cancer. (The excel files are located in the IPA-results folder.)
 
-Moving forward, I will be looking at individual genes that are involved in a specific pathway of interest to me, carbohydrate metabolism, which was down regulated in cancerous samples, compared to normal samples.
+Moving forward, I will be look at the pathway title "metabolism of carbohydrates", which was downregulated in cancerous samples, compared to normal samples.
 
 
 
-#### Heatmap of carbohydrate metabolism pathway.
-
-I will look at the "metabolism of carbohydrates" pathway, which is downregulated in gastric cancer.
+#### Plot heatmap of carbohydrate metabolism pathway.
 
 ```{r get list of genes in metabolism of carbohydrates pathway}
 meta <- read_xls("./IPA-results/down-genes_diseases_and_functions.xls", col_names = TRUE) %>%
@@ -451,7 +461,7 @@ meta <- read_xls("./IPA-results/down-genes_diseases_and_functions.xls", col_name
   mutate(genes = toupper(genes)) %>%
   select(genes)
 
-meta
+meta %>% head(22)
 ```
 
 ```{r create df containing FPKM values for genes in carbohydrate metabolism pathway}
@@ -479,9 +489,6 @@ meta <- meta %>%
 
 meta_norm <- log10(meta + 0.1)
 ```
-
-
-#### Plot heatmap of carbohydrate gene expression
 
 
 ```{r annotated heatmap, warning=FALSE}
@@ -551,6 +558,8 @@ ht1 + ht2 + ht3 + ht4
 
 When plotting all 4 heatmaps together with the original heatmap as the main, the separation is clearest with the original. Individually, ht2 makes cell line 3 its own cluster and clusters cell line 2 and cancer tissue 3 with normal, ht2 is similar to original heatmap, and ht3 makes cell line 1 and 3 are their own clusters. I conclude that the original clustering method is still the best option for this pathway.
 
+-----
+
 #### Linear model test on individual genes for significance
 
 ```{r add principal components to data frame}
@@ -562,7 +571,7 @@ lm_df <- merge(x = pca$x, y = meta_norm, by = "row.names") %>%
   rename(group = Row.names) %>%
   mutate(group = if_else(grepl("norm", group), "normal tissue", if_else(grepl("ct", group), "cancer tissue", "cancer cell line")))
 
-lm_df
+#lm_df
 ```
 
 ```{r lm test}
@@ -617,55 +626,12 @@ meta_pval %>%
   labs(y = "p-value", x = "gene") 
 ```
 
-
-Retest linear model correction with principal components from filtered PCA (I am doing this just out of curiosity, I will go with using the principal components from the first PCA for this analysis, as those describe the **innate** differences between the three groups)
-
-```{r add principal components from second PCA to data frame}
-
-# add PC1 and PC2 to the data frame for correction
-
-lm_df2 <- merge(x = pca2$x, y = meta_norm, by = "row.names") %>%
-  select(-c(4:9)) %>%
-  rename(group = Row.names) %>%
-  mutate(group = if_else(grepl("norm", group), "normal tissue", if_else(grepl("ct", group), "cancer tissue", "cancer cell line")))
-
-
-# lm test on all genes
-no_correction <- list() # initialize empty list to hold p-values for non-corrected lm test
-correction <- list() # empty list to hold p-values for corrected lm test
-for (i in names(lm_df[4:length(names(lm_df2))])){
-  no_correction[i] <- lmp(lm(get(i) ~ group, lm_df2))
-  correction[i] <- lmp(lm(get(i) ~ group + PC1 + PC2, lm_df2))
-}
-
-
-# store results in data frame
-meta_pval2 <- rbind(as.data.frame(no_correction), as.data.frame(correction)) %>% 
-  t() %>%
-  as.data.frame() %>%
-  rename("Non PC Corrected p-value" = V1, "PC Corrected p-value" = V2) %>%
-  format(scientific = FALSE) %>%
-  rownames_to_column("gene")
-
-meta_pval2 <- meta_pval2 %>%
-  mutate(`Non PC Corrected p-value` = as.numeric(`Non PC Corrected p-value`),
-         `PC Corrected p-value` = as.numeric(`PC Corrected p-value`)) 
-
-
-meta_pval2 %>% 
-  arrange(`PC Corrected p-value`) %>%
-  rename(`p-value before PC correction` = `Non PC Corrected p-value`,
-         `p-value after PC correction` = `PC Corrected p-value`) %>%
-  reshape::melt() %>%
-  ggplot(aes(x = fct_inorder(gene), y = value)) +
-  geom_bar(aes(fill = variable), stat = "identity", position = "dodge", width = 0.5) +
-  scale_fill_manual(values = c("gray", "#FA871B")) + 
-  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
-  geom_hline(yintercept = 0.05, linetype = "dashed") +
-  labs(y = "p-value", x = "gene") 
-```
-
 It appears that after correcting for the first two principal components, all genes except for CD22, B3GNT8, B3GAT1, and ALDH1A1 are significant.
+
+
+-----
+
+#### Quick information about significant genes:
 
 * P2RY6: [promotes tumorigenesis by inhibiting apoptosis](https://pubmed.ncbi.nlm.nih.gov/29454075/)
 
@@ -691,6 +657,7 @@ It appears that after correcting for the first two principal components, all gen
 
 * GCNT2: [encodes enzyme responsible for formation of blood group I antigen.](https://en.wikipedia.org/wiki/GCNT2) [Hypomethylated in colorectal cancer](https://pubmed.ncbi.nlm.nih.gov/25750292/)
 
+-----
 
 I have selected three genes of interest to me: GPD1, GCNT4, and SLC24A for further analysis.
 
@@ -750,7 +717,7 @@ grid.arrange(p1, p2, p3, ncol = 2)
 
 Here are the barplots of their average expression and standard error between the three groups. I also included the p-values of their significance after correcting for principal components 1 and 2, you can see that levels of expression are a lot lower in cancer cell lines and tissue compared to the normal groups and their error bars don’t overlap.
 
-
+-----
 
 #### SLC2A4
 
@@ -792,9 +759,9 @@ In [this paper](https://pubmed.ncbi.nlm.nih.gov/34696660/), the researchers look
 Additionally, they used a program called TargetScan to predict an microRNA that binds to the 3’UTR of GCNT4 and confirmed in 45 of their own gastric cancer samples that this microRNA decreases GCNT4 expression which in turn upregulated downstream pathways that have been studied in the progression of gastric cancer.
 
 
+-----
 
-
-#### Conclusions and Future Directions
+### Conclusions and Future Directions
 
 Overall, my findings of abnormally expressed genes and pathways in gastric cancer were consistent with my expectations with many cancer related pathways being upregulated and many immune cell pathways being downregulated. 
 
